--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.6.8",
     "firebase": "^10.11.0",
     "google-map-react": "^2.2.1",
+    "loginproject": "file:..",
     "mapbox-gl": "^3.3.0",
     "moment": "^2.30.1",
     "react": "^18.2.0",
