--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.1",
     "nodemailer": "^6.9.13",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "react-mapbox-gl": "^5.1.1",
+    "react-map-gl": "^7.1.7",
+    "mapbox-gl": "^3.3.0"
   }
 }
